--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@wix/wix-style-react",
   "description": "wix-style-react",
-  "version": "1.1.0",
-  "main": "index.js",
+  "version": "1.0.0",
+  "main": "./src/index.js",
   "scripts": {
     "test": "mocha --require spec/setup.js \"spec/**/*.spec.js\"",
     "compile": ":",
