--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
+    "lodash": "^4.17.1",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-modal": "^1.5.2"
